fixed wrong margin and scroll behavior in

--- a/frontend/src/app/feature/radiolearn-ui/radiolearn-ui.component.scss
+++ b/frontend/src/app/feature/radiolearn-ui/radiolearn-ui.component.scss
@@ -97,10 +97,8 @@ body {
   border-right: 1px solid #3f51b5;
 }
 .shallowSelectionList{
-  padding-top: 10px;
   width: 20%;
-  min-height: 100%;
-  height: auto;
+  height: 100%;
   float: left;
   overflow-y: auto;
   overflow-x: auto;
